...
        packageInfo.versionCode.toString()
    }
    val body = """


        ---
        App: Vox.md $versionName ($versionCode)
        Platform: Android ${Build.VERSION.RELEASE} (API ${Build.VERSION.SDK_INT})
        Device: ${Build.MANUFACTURER} ${Build.MODEL}
        ---
    """.trimIndent()
    val uri = Uri.parse("mailto:cody@isolated.tech").buildUpon()
        .appendQueryParameter("subject", "Vox.md Feedback")
...
